@@ -9,6 +9,7 @@
 * indicator_docking: #2682 done: support for new versions of Unity (Vogel)
 * unity_integration: #2892 done: display number of unread messages in Unity Launcher (Vogel)
 * history: #2902 fixed: clear history menu item dissappear after a second (Vogel)
+* jabber: #2886 fixed: add option to stay in chat room after closing chat window (Vogel)
 
 +++ version 1.3
 * gui: #2869 fixed: uuids visible in info panel after adding new buddy (Vogel)
